<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_values"
            android:title="@string/menu_values" />
        <item
            android:id="@+id/nav_being_yourself"
            android:title="@string/menu_being_yourself" />
        <item
            android:id="@+id/nav_thinking_errors"
            android:title="@string/menu_thinking_errors" />
        <item
            android:id="@+id/nav_thoughts"
            android:title="@string/menu_thoughts" />
        <item
            android:id="@+id/nav_emotions"
            android:title="@string/menu_emotions" />
        <item
            android:id="@+id/nav_conversations"
            android:title="@string/menu_conversations" />
        <item
            android:id="@+id/nav_reminders"
            android:title="@string/menu_reminders" />
    </group>

</menu>
